# verifyAI

./: .flake8  .gitignore  .markdownlint.json  .pre-commit-config.yaml  README.md  dotenv  mypy.ini  pyproject.toml  ruff.toml
src/devtools/: bedrock.ipynb  data_evaluation.ipynb  data_exploration.ipynb
src/pastel/: classifiers.py  config.py  evaluation.py  evaluators.py  helpers.py  models.py  parsers.py  prompts.py  reference.py  validation.py
src/pastel/prompts/: __init__.py  consolidate.py  grammar.py  images.py  subject.py
src/pastel/reference/: __init__.py  terms.py
src/reports/: evaluation_08slGxClIGb9SlS83ieOFBYvIleE1CgdGCeW10xor3+UP6iinit+MeIgqXRRnv9F.md  evaluation_0wvTBiDyAsazB20qDhyomFS505t1ko+Dne-eZsDtqddeA4-SnAMhg8Bctev9RGU1.md  evaluation_AK3YMLT0XyColbBFQy7llWDzz33MHSjZzGC9f+HlUq8=.md  evaluation_CjjbUkCiNHFSunlwypkIRKSrXNcgPjgsVaq7Wx44Lt4-ZaapBaB0I6yipszty0MZ.md  evaluation_MCpdUuJ2yLq1+K4hxHkHmwcYoWdfcxDF+0Qy9KAopCg=.md  evaluation_MoOnDjcgZVe40kjmObUddf4chaC9AzZnlIJ2Wfm0bWQ=.md  evaluation_XluesnP1tIued73BPqDz1Nwm6b2ZfktQzkbijpdKGzfPKsAHZzRa8rjLIbMJqo2E.md  evaluation_Z8rSOymnjpW1HhwWUR-cxen4c7R84sokre43IQ9pLwI=.md  evaluation_aJgyorFdgAf8I37PZ84R2inxAAkSSLUD-BSdh7FDJuE=.md  evaluation_f-8PmUA8Z7+LnRdTEgpQg9ALyUXqRV-GtPoFEAayxZk=.md  evaluation_mEcKY+P4qKrN8eAIHM3ZjvqGuRf96I7bdKdNORYlcdE=.md  evaluation_oxSOU23ZPwS6p26JWzjrC2VVdJYbhkvK2KYOsKGisyZWfyDMzhRyzBUWKQ9NdQH-.md  evaluation_pdl6muw8mJl9DL7bVO40nFOroodOnSFBG5e7zw+nAW32k7BiKehq6oLHwyItBjfw.md  evaluation_vbOJFqJ0BOzEXIi9uBzgow+z55EcdgzYq6ntebANax8=.md  evaluation_zOh+1hfGBc0APeN39xBT9Gw3m4vCj5fzPe4I4Ix86FlsyGY2I2GRkqPVee1eQqQe.md
src/verifyai/: classifiers.py  evaluation.py  helpers.py  parsers.py
src/verifyai/archive/: evaluators.py
src/verifyai/prompts/: __init__.py  evaluation.py  evidence.py  grammar.py  subject.py
src/verifyai/reference/: models.py
